objects/CMPL123CME__EUMIR_Validation_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Conditional_Values__c</fullName>
        <description>Conditional Values</description>
        <inlineHelpText>Conditional Values</inlineHelpText>
        <label>Conditional Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Dependent_Field__c</fullName>
        <description>Dependent Field</description>
        <inlineHelpText>Dependent Field</inlineHelpText>
        <label>Dependent Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Error_Message__c</fullName>
        <description>Error Message</description>
        <inlineHelpText>Error Message</inlineHelpText>
        <label>Error Message</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                    <default>true</default>
                    <label>Required</label>
                </value>
                <value>
                    <fullName>IsNegative</fullName>
                </value>
                <value>
                    <fullName>InRange</fullName>
                </value>
                <value>
                    <fullName>Length2</fullName>
                </value>
                <value>
                    <fullName>Length4</fullName>
                </value>
                <value>
                    <fullName>Length18</fullName>
                </value>
                <value>
                    <fullName>Length50</fullName>
                </value>
                <value>
                    <fullName>Length80</fullName>
                </value>
                <value>
                    <fullName>Length200</fullName>
                </value>
                <value>
                    <fullName>Length255</fullName>
                </value>
                <value>
                    <fullName>Length300</fullName>
                </value>
                <value>
                    <fullName>Length1000</fullName>
                </value>
                <value>
                    <fullName>Length2000</fullName>
                </value>
                <value>
                    <fullName>Length4000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__Field_API_Name__c</fullName>
        <description>Field API Name</description>
        <inlineHelpText>Field API Name</inlineHelpText>
        <label>Field API Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Operator__c</fullName>
        <description>Operator</description>
        <inlineHelpText>Operator</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CONTAINS</fullName>
                    <default>true</default>
                    <label>CONTAINS</label>
                </value>
                <value>
                    <fullName>ISREQUIRED</fullName>
                </value>
                <value>
                    <fullName>GREATERTHAN</fullName>
                </value>
                <value>
                    <fullName>ENUM</fullName>
                </value>
                <value>
                    <fullName>RANGE</fullName>
                </value>
                <value>
                    <fullName>MULTIDEPENDENCY</fullName>
                </value>
                <value>
                    <fullName>ISNOTBLANK</fullName>
                </value>
                <value>
                    <fullName>ISNUMBER</fullName>
                </value>
                <value>
                    <fullName>NOTCONTAINS</fullName>
                </value>
                <value>
                    <fullName>ISNOTREQUIRED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>EUMIR Validation Configuration</description>
    <label>EUMIR Validation Configuration</label>
    <pluralLabel>EUMIR Validation Configurations</pluralLabel>
    <listViews>
        <fullName>CMPL123CME__All</fullName>
        <columns>DeveloperName</columns>
        <columns>MasterLabel</columns>
        <columns>NamespacePrefix</columns>
        <columns>IsProtected</columns>
        <columns>CMPL123CME__Conditional_Values__c</columns>
        <columns>CMPL123CME__Dependent_Field__c</columns>
        <columns>CMPL123CME__Error_Message__c</columns>
        <columns>CMPL123CME__Field_API_Name__c</columns>
        <columns>CMPL123CME__Operator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>